--- a/snake-kotlinjs/build.gradle
+++ b/snake-kotlinjs/build.gradle
@@ -1,5 +1,5 @@
 buildscript {
-    ext.kotlin_version = '1.3.41'
+    ext.kotlin_version = '1.3.50'
     repositories {
         mavenCentral()
     }
@@ -24,8 +24,11 @@ task assembleWeb(type: Sync) {
             includeEmptyDirs = false
             include { fileTreeElement ->
                 def path = fileTreeElement.path
-                path.endsWith(".js") && (path.startsWith("META-INF/resources/") ||
-                    !path.startsWith("META-INF/"))
+                path.endsWith(".js") &&
+                    (
+                        path.startsWith("META-INF/resources/") ||
+                        !path.startsWith("META-INF/")
+                    )
             }
         })
     }
