Generate source map files

--- a/snake-kotlinjs/build.gradle
+++ b/snake-kotlinjs/build.gradle
@@ -18,6 +18,10 @@ dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib-js:$kotlin_version"
 }
 
+compileKotlin2Js {
+    kotlinOptions.sourceMap = true
+}
+
 task assembleWeb(type: Sync) {
     configurations.compile.each { File file ->
         from(zipTree(file.absolutePath), {
