--- a/snake-kotlinjs/build.gradle
+++ b/snake-kotlinjs/build.gradle
@@ -9,6 +9,7 @@ buildscript {
 }
 
 apply plugin: 'kotlin2js'
+apply plugin: 'kotlin-dce-js'
 
 repositories {
     mavenCentral()
@@ -18,28 +19,17 @@ dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib-js:$kotlin_version"
 }
 
+def outDir = "${projectDir}/web"
+
+clean.doFirst {
+    delete outDir
+}
+
 compileKotlin2Js {
     kotlinOptions.sourceMap = true
 }
 
-task assembleWeb(type: Sync) {
-    configurations.compile.each { File file ->
-        from(zipTree(file.absolutePath), {
-            includeEmptyDirs = false
-            include { fileTreeElement ->
-                def path = fileTreeElement.path
-                path.endsWith(".js") &&
-                    (
-                        path.startsWith("META-INF/resources/") ||
-                        !path.startsWith("META-INF/")
-                    )
-            }
-        })
-    }
-    from compileKotlin2Js.destinationDir
-    into "${projectDir}/web"
-
-    dependsOn classes
+runDceKotlinJs {
+    dceOptions.outputDirectory = outDir
+    dceOptions.devMode = false
 }
-
-assemble.dependsOn assembleWeb
